--- a/BookstoreWeb/Areas/Customer/Views/Cart/OrderSummary.cshtml
+++ b/BookstoreWeb/Areas/Customer/Views/Cart/OrderSummary.cshtml
@@ -74,12 +74,12 @@
 										<h6 class="my-0">@details.Product.Title</h6>
 										<small class="text-muted">Quantity: @details.Quantity</small>
 									</div>
-									<span class="text-muted">@((details.Price * details.Quantity).ToString("c"))</span>
+									<span class="text-muted">$@((details.Price * details.Quantity).ToString("0.00"))</span>
 								</li>
 							}
 							<li class="list-group-item d-flex justify-content-between bg-light">
 								<small class="text-info">Total (CAD)</small>
-								<strong class="text-info">@Model.OrderHeader.OrderTotal.ToString("c")</strong>
+								<strong class="text-info">$@Model.OrderHeader.OrderTotal.ToString("0.00")</strong>
 							</li>
 						</ul>
 					</div>
